--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#3F51B5</color>
-  <color name="colorPrimaryDark">#303F9F</color>
+  <color name="colorPrimary">#009edb</color>
+  <color name="colorPrimaryDark">#0070a9</color>
   <color name="colorAccent">#f97e26</color>
+  <color name="colorLight">#61cfff</color>
   <color name="colorfab">#f97e26</color>
   <color name="colorBar">#ec2630</color>
+  <color name="colorWhite">#ffffff</color>
 </resources>
